# yorishiro

./: .dockerignore  .env.example  .gitignore  .markdownlint-cli2.jsonc  Cargo.toml  Dockerfile  LICENSE  LICENSE-MIT  Makefile  README.md  config.example.yml  docker-compose.yml
.devcontainer/: Dockerfile  devcontainer.json
.github/: pull_request_template.md
.github/workflows/: ci.yml  release.yml
crates/yorishiro-core/: Cargo.toml
crates/yorishiro-core/src/: auth.rs  db.rs  embedding.rs  embedding_onnx.rs  embedding_sync.rs  entities.rs  error.rs  export.rs  lib.rs  recall.rs  relations.rs  schemas.rs  search.rs  templates.rs  tenancy.rs
crates/yorishiro-core/src/metaschema/: mod.rs  projection.rs  types.rs  validate.rs  versioning.rs
crates/yorishiro-core/src/metaschema/versioning/: mod.rs  tests.rs
crates/yorishiro-core/src/models/: entities.rs  export.rs  mod.rs  recall.rs  relations.rs  schemas.rs  search.rs  tenancy.rs
crates/yorishiro-core/src/repositories/: entities.rs  export.rs  mod.rs  recall.rs  relations.rs  schemas.rs  search.rs  tenancy.rs
crates/yorishiro-core/src/repositories/entities/: mod.rs  tests.rs
crates/yorishiro-core/src/repositories/recall/: mod.rs  tests.rs
crates/yorishiro-core/src/repositories/relations/: mod.rs  tests.rs
crates/yorishiro-core/src/repositories/schemas/: mod.rs  tests.rs
crates/yorishiro-core/src/repositories/search/: mod.rs  tests.rs
crates/yorishiro-core/src/repositories/tenancy/: invites.rs  memberships.rs  mod.rs  tenants.rs  users.rs  workspaces.rs
crates/yorishiro-core/src/services/: auth.rs  embedding.rs  embedding_onnx.rs  embedding_sync.rs  mod.rs
crates/yorishiro-core/src/services/auth/: authenticate.rs  authorize.rs  keys.rs  mod.rs  tests.rs
crates/yorishiro-core/src/services/embedding/: mod.rs  onnx.rs  openai.rs
crates/yorishiro-core/src/services/embedding/sync/: mod.rs  tests.rs
crates/yorishiro-core/templates/: task-management.json
crates/yorishiro-server/: Cargo.toml
crates/yorishiro-server/src/: admin.rs  auth.rs  config.rs  error.rs  health.rs  lib.rs  logging.rs  main.rs  rate_limit.rs  routes.rs  state.rs  whoami.rs
crates/yorishiro-server/src/admin/: commands.rs  mod.rs
crates/yorishiro-server/src/http/: mod.rs
crates/yorishiro-server/src/http/controllers/: entities.rs  export.rs  identity.rs  members.rs  mod.rs  relations.rs  schemas.rs  search.rs  setup.rs  workspaces.rs
crates/yorishiro-server/src/http/controllers/setup/: mod.rs  tests.rs
crates/yorishiro-server/src/http/mcp/: entities.rs  mod.rs  recall.rs  relations.rs  schemas.rs  search.rs
crates/yorishiro-server/src/http/middleware/: auth.rs  mod.rs  rate_limit.rs
crates/yorishiro-server/src/logging/: mod.rs  syslog.rs
crates/yorishiro-server/src/mcp/: entities.rs  mod.rs  recall.rs  relations.rs  schemas.rs  search.rs
crates/yorishiro-server/src/rest/: entities.rs  export.rs  identity.rs  members.rs  mod.rs  relations.rs  schemas.rs  search.rs  setup.rs
crates/yorishiro-server/src/tests/: auth.rs  entities.rs  export.rs  helpers.rs  mcp.rs  members.rs  mod.rs  relations.rs  schemas.rs  whoami.rs  workspaces.rs
crates/yorishiro-web/: Cargo.toml
crates/yorishiro-web/src/: lib.rs
crates/yorishiro-web/web/: app.js  config.js  style.css
docs/: api.md  configuration.md  deployment.md  embedding-providers.md  operations.md  schema.md  setup.md
docs/ja/: README.md  api.md  configuration.md  deployment.md  embedding-providers.md  operations.md  schema.md  setup.md
migrations/: 20260712000001_initial.sql  20260712000002_rls.sql  20260712000003_role_separation.sql  20260712000004_api_key_auth_function.sql  20260713000001_pg_trgm.sql  20260714000001_entity_audit_columns.sql  20260715000001_invites.sql  20260716000001_stripe_billing.sql
templates/: task-management.json
web/: app.js  config.js  index.html
