[package]
name = "yorishiro-core"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
argon2.workspace = true
async-trait.workspace = true
chrono.workspace = true
jsonschema.workspace = true
ort.workspace = true
pgvector.workspace = true
rand.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
sea-query.workspace = true
sea-query-binder.workspace = true
sqlx.workspace = true
thiserror.workspace = true
tokenizers.workspace = true
tokio = { workspace = true }
tracing.workspace = true
utoipa.workspace = true
uuid.workspace = true

[dev-dependencies]
tokio.workspace = true
wiremock.workspace = true
