[package]
name = "yorishiro-server"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "yorishiro-server"
path = "src/main.rs"

[dependencies]
yorishiro-core = { path = "../yorishiro-core" }
anyhow.workspace = true
axum.workspace = true
chrono.workspace = true
http.workspace = true
rmcp.workspace = true
schemars.workspace = true
serde.workspace = true
serde_json.workspace = true
sqlx.workspace = true
tokio.workspace = true
tokio-util.workspace = true
tower-http.workspace = true
tracing.workspace = true
tracing-appender.workspace = true
tracing-subscriber.workspace = true
uuid.workspace = true
utoipa.workspace = true
utoipa-swagger-ui.workspace = true

[dev-dependencies]
async-trait.workspace = true
tower.workspace = true
